1999-11-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/FvwmButtons.c (HandlePanelPress):
	attempt to improve sliding panels

	* FvwmIconBox/icons.c (CreateIconWindow):
	* FvwmBacker/FvwmBacker.c (ExecuteMatchingCommands):
	(AddCommand):
	-Wall fixes

1999-11-24  Brad Giaccio  <bgiaccio@psrw.com>
	* FvwmIconMan/xmanager.c (resize_manager):
	if using a colorset gradient or pixmap it is now resized when
	then the manager changes sizes

1999-11-24  olicha   <olivier.chapuis@free.fr>

	* FvwmTaskBar/FvwmTaskBar.1
	* FvwmTaskBar/ConfigFvwmTaskBar
	Replaced FvwmTaskBarGeometry +0-1 by FvwmTaskBarGeometry +0-0 since
	now the position computation take the real border width in account

1999-11-24  Hippo

	* FvwmIconBox/*.c: fixed HilightFocusWin, fixed colorset stretching,
	allowed some XErrors to not dump core
	*FvwmIconMan/*.c: removed some XSync()s, allowed some XErrors.

1999-11-23  Mikhael Goikhman  <migo@hoomemail.com>

	Applied a FvwmBacker patch from Michael Han, fixed and modified.

	* FvwmBacker/FvwmBacker.[ch]:
	* FvwmBacker/ConfigFvwmBacker:
	* FvwmBacker/FvwmBacker.1:
	Added page-awareness; converted to linked list of commands instead of
	table (to fix bugs caused if DesktopSize changes or if desktop is
	negative).
	A new syntax: *FvwmBackerCommand (Page x y, Desk d) command.
	Support for dynamic config changes; some clean up.

1999-11-22  olicha  <olivier.chapuis@free.fr>

	* FvwmTaskBar/Goodies.c (CreateOrUpdateGoody):
	(CreateMailTipWidow):
	(MouseInClock):
	(MouseInMail):
	Fixed mail drawing and tips drawing.

	* FvwmTaskBar/FvwmTaskBar.c (LoopOnEvents):
	Fixed an AutoHide bug: no hide after a "StartMenu" Popup

1999-11-22  olicha  <olivier.chapuis@free.fr>

	* FvwmTaskBar/FvwmTaskBar.c (ProcessMessage):
	(LoopOnEvents):
	(StartMeUp):
	Fixed AutoHide with dynamic change of the frame width.

1999-11-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmIconMan/fvwm.c (new_window):
	removed debug 'sleep'

1999-11-21  olicha  <olivier.chapuis@free.fr>
