@@ -141,6 +141,10 @@ For example, when the placement is "Left Top", icons are placed from
 left to right, and new rows are added from top to bottom. The default
 vale is "Left Bottom".
 
+.IP "*FvwmIconBoxUseSkipList"
+Tells FvwmIconBox to not show the windows that are listed on a WindowListSkip
+line in the configuration file.
+
 .IP "*FvwmIconBoxLines"
 Specifies the number of icons placed in a line. If \fIprimary\fP is
 Left or Right, this value specifies the number of columns.
