@@ -104,7 +104,7 @@ changes.
 
 .IP "*FvwmWinListUseSkipList"
 Tells FvwmWinList to not show the windows that are listed on a WindowListSkip
-line if the configuration file.
+line in the configuration file.
 
 .IP "*FvwmWinListShowCurrentDesk"
 Specifies that only windows on the current desk are displayed.
